legacy/k3s/apps/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: nextcloud
          image: lscr.io/linuxserver/nextcloud:latest
          ports:
            - containerPort: 443
              name: https
          volumeMounts:
            - name: nextcloud-rwx
              mountPath: /config
              subPath: config
            - name: nextcloud-rwx
              mountPath: /data
              subPath: data
      volumes:
        - name: nextcloud-rwx
          persistentVolumeClaim:
            claimName: nextcloud-rwx
