legacy/k3s/apps/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  type: ClusterIP
  selector:
    app: nextcloud
  ports:
    - name: https
      port: 443
      targetPort: https
